--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 
-	<title>Push Me Doctor</title>
+	<title>Push Me Doctor, love me always</title>
 
 </head>
 <body>
